--- a/gb/22/12/27/n13893098.md
+++ b/gb/22/12/27/n13893098.md
@@ -1,24 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国疫情大爆发 三四线城市以及村镇也沦陷</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12900412-2.jpeg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12900412-2.jpeg" />///image2=```diff
+- 2021年4月22日起，云南省瑞丽市再开始新一轮全员中共肺炎核酸检测。图为2020年9月15日，瑞丽市居民在接受核酸检测。(STR/AFP via Getty Images)
+```
 <h6>2021年4月22日起，云南省瑞丽市再开始新一轮全员中共肺炎核酸检测。图为2020年9月15日，瑞丽市居民在接受核酸检测。(STR/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2022年12月28日讯】近期，中国疫情大爆发，除一线大城市，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%89%E5%9B%9B%E7%BA%BF%E5%9F%8E%E5%B8%82.md#1">三四线城市</a>及其周边村镇也同时沦陷，医疗资源严重缺乏。另外，中共推行了三年的极端防疫措施挤占了基层医院的整体医护资源，导致医疗系统在这轮疫情冲击下崩溃。</p>
-<p>《财经》近日对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E4%B8%9C.md#1">山东</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%9F%E8%A5%BF.md#1">江西</a>、黑龙江、吉林、安徽、湖北、云南、河北等省份的多个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%89%E5%9B%9B%E7%BA%BF%E5%9F%8E%E5%B8%82.md#1">三四线城市</a>做了采访，从当地居民、药店和医院医护人员处了解到中小城市遭受疫情冲击的现状。</p>
-<p>招远是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E4%B8%9C.md#1">山东</a>烟台下辖的一个县级市，王立是招远市的一位理发师。一周前，他母亲发烧39.5度，连续三天高烧不退，药店却买不到退烧药，只能上医院。但医院也没有退烧药。</p>
+	<p>【大纪元2022年12月28日讯】近期，中国疫情大爆发，除一线大城市，三四线城市及其周边村镇也同时沦陷，医疗资源严重缺乏。另外，中共推行了三年的极端防疫措施挤占了基层医院的整体医护资源，导致医疗系统在这轮疫情冲击下崩溃。</p>
+<p>《财经》近日对山东、江西、黑龙江、吉林、安徽、湖北、云南、河北等省份的多个三四线城市做了采访，从当地居民、药店和医院医护人员处了解到中小城市遭受疫情冲击的现状。</p>
+<p>招远是山东烟台下辖的一个县级市，王立是招远市的一位理发师。一周前，他母亲发烧39.5度，连续三天高烧不退，药店却买不到退烧药，只能上医院。但医院也没有退烧药。</p>
 <p>距招远50多公里的莱州市也同样面临着严重缺药问题。当地居民王艳说，从12月开始，退烧药在药店根本买不到。莱州是12月8日左右开始公共场合不查48小时核酸的。查的时候满大街都是人，现在外头哪还有人，都不敢上街。</p>
 <p>“所有人都措手不及。”徐慧说。她是安徽省马鞍山市一家三甲医院的医生。12月15日，接到院里不用再做核酸，全面放开的通知后，徐慧马上去科里开药，发现和感冒相关的药品全没有了，只剩下熬药的汤剂。</p>
 <p>过去一周，是徐慧从业30多年来见过最混乱的时候。“下午五点多，天已经全黑了，我下班路过发热门诊，还有数百号人在寒风里排队。”她说。</p>
 <p>除了染疫人数量的激增，更严重的问题是医护人员也在短时间内集中染疫。</p>
 <p>12月23日，河北省沧州市一家三甲医院的医生表示，解封之前，科室是要求做二级防护，现在全面放开之后，防护等级下降，要求不能领面屏，不穿隔离衣。“我不知道这是和防护物资供应有关，还是和降防护有关。我们科里大夫现在至少感染到百分之七八十了。”</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%9F%E8%A5%BF.md#1">江西</a>省九江市彭泽县多位感染者提到，之前宣传都说大多是无症状，类似普通感冒，不用吃药就能好，所以并没有提前囤药。不少人在听说染疫很难受后，才去药店买药，那个时候就已经买不到药了。</p>
+<p>江西省九江市彭泽县多位感染者提到，之前宣传都说大多是无症状，类似普通感冒，不用吃药就能好，所以并没有提前囤药。不少人在听说染疫很难受后，才去药店买药，那个时候就已经买不到药了。</p>
 <p>云南盈江市地处中缅边境，曾封城7个多月的瑞丽，就在盈江隔壁。当地人李丰表示，买不到布洛芬和对乙酰等退烧药，也买不到抗原，所以“阳”了大多数吃克感敏和安乃近。但小城市人普遍对药物副作用不太了解，多有不当用药的情况。</p>
 <p>在很多三四线城市及其周边县城，几乎所有人都有认识的亲戚朋友“病了”，但人们很难买到退烧药，更别提抗原了。</p>
 <p>在药品短缺的城市，发热门诊早就人满为患。湖北某县城的一位医务工作者表示，医院的发热门诊接诊数量确实明显上升，没放开之前发热门诊一天接待10多人，放开之后逐渐增多至一天200多人的接诊量。该医院有约三分之一的工作人员已上报阳性，本周开始医院提倡轻症和无症状医务人员仍需工作。</p>
-<p><center><a title="中国农村县城医疗资源少，死人会比大城市多，而且外界难以知晓。" src="https://www.ganjing.com/zh-CN/embed/1fgqu9fped013D2tYYyLGOBen1d81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a title="中国农村县城医疗资源少，死人会比大城市多，而且外界难以知晓。" src=""></a><a href="https://dld25pfif4r64.cloudfront.net/P4gqKCteo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-CN/embed/1fgqu9fped013D2tYYyLGOBen1d81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>中共极端防疫三年 县域医院遭重创</h2>
 <p>在这波疫情大爆发之前，中共实施了三年的极端防疫政策，封城、封小区及全员核酸检测成中国各地的封控常态。</p>
 <p>据《第一财经》报导，谈及这3年来的防疫感受，湖北当地乡镇卫生院的一名负责人高某说，“全去做核酸检测和疫情防控了。”</p>
@@ -27,48 +29,36 @@
 <p>“一旦搞全员核酸或者支援兄弟县市，基本是我们顶在前面。这是上级来的战时命令，我们还不得不执行。”刘梅说，常常市里来一纸通知，要求带几辆车、两三百人、自备防护物资、核酸检测试剂等去支援兄弟县市做核酸。</p>
 <p>一份县级卫健系统的汇报文件材料显示，今年1月份以来，全县卫健系统抽调一千余人次医护人员参加交通卡口、隔离点、哨卡值班值守，派出九百余人次医护人员支援省外和兄弟县市。</p>
 <p>此外，防疫经常挤占医院的整体医护资源。刘梅说，县人民医院的防疫开支却并未得到全部，“仅仅只是补了一部分。”防疫也影响其它科室正常开诊。</p>
-<p><center><a title="小山村里阳性人满为患" src="https://www.ganjing.com/zh-CN/embed/1fgqu69cn54516QYWDemlqp2O15b1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center><em>（文中受访者均为化名。）</em></p>
+<p><center><a title="小山村里阳性人满为患" src=""></a><a href="https://dld25pfif4r64.cloudfront.net/P4gqKCteo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-CN/embed/1fgqu69cn54516QYWDemlqp2O15b1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center><em>（文中受访者均为化名。）</em></p>
 <p>责任编辑：李净#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/16/n13886388.md#1">中国人寿拒不赔付：奥密克戎不是新冠 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890781.md#1">上海强生制药出货被政府接管 百姓却难买退烧药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891239.md#1">1天5名中共院士病亡 包括吹捧双黄连的蒋华良</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892296.md#1">台州医院1400职工阳性 华山医院80%感染</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/16/n13886388.md#1">中国人寿拒不赔付：奥密克戎不是新冠 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/23/n13890781.md#1">上海强生制药出货被政府接管 百姓却难买退烧药</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/24/n13891239.md#1">1天5名中共院士病亡 包括吹捧双黄连的蒋华良</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/26/n13892296.md#1">台州医院1400职工阳性 华山医院80%感染</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11286029.md#1" target="_blank">祝贺法轮大法日 密西根州再发特殊褒奖令</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960616.md#1">美中航空业之争 美有杀手锏 C919何去何从</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962026.md#1">传马云原计划去日本 突然在香港转道回国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961986.md#1">北京庆丰包子铺又被查 习近平曾到访就餐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/27/n13893098.htm">中国疫情大爆发 三四线城市以及村镇也沦陷</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893098.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410373.md#1">第五面墙：三位意大利天顶壁画家的杰作欣赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416712.md#1">【唐青看时事】卢比奥势不可挡 北京如何应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416062.md#1">【时事金扫描】川普突改就职地址 重振好莱坞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416782.md#1">【时事金扫描】川普就职典礼再变 隐藏大事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416239.md#1">川普就职前和习通话释何信号 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414131.md#1">如何找到冬季的隐藏之光 保持健康</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/27/n13893098.htm">中国疫情大爆发 三四线城市以及村镇也沦陷</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/27/n13893098.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
