--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,8 +14,31 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1nvr7ffvd2d6n.cloudfront.net/N5exKD4Je"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d2184d78prq5kd.cloudfront.net/K0ixKD4Jk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>台湾总统祝贺特朗普与万斯</h2>
+<p>台湾总统赖清德在社交平台X上发文祝贺川普和万斯就职。</p>
+<p>“台湾期待与贵政府合作，促进全世界的持久自由、和平与繁荣”，赖清德写道，“我们祝愿你们在未来的岁月中取得巨大成功”。</p>
+<blockquote class="twitter-tweet" data-width="550" data-dnt="true">
+<p lang="en" dir="ltr">Sincere congratulations to <ahref="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">@realDonaldTrump</a> &amp; <ahref="https://twitter.com/JDVance?ref_src=twsrc%5Etfw">@JDVance</a> on your inauguration as <ahref="https://twitter.com/hashtag/POTUS?src=hash&amp;ref_src=twsrc%5Etfw">#POTUS</a> &amp; <ahref="https://twitter.com/hashtag/VP?src=hash&amp;ref_src=twsrc%5Etfw">#VP</a>. <ahref="https://twitter.com/hashtag/Taiwan?src=hash&amp;ref_src=twsrc%5Etfw">#Taiwan</a> looks forward to working with your administration to promote enduring freedom, peace &amp; prosperity around the world. We wish you great success in the years ahead.</p>
+<p>&mdash; 赖清德Lai Ching-te (@ChingteLai) <ahref="https://twitter.com/ChingteLai/status/1881388856769237234?ref_src=twsrc%5Etfw">January 20, 2025</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
+<h2>川普再次退出世界卫生组织</h2>
+<p>川普签署了行政令，开始启动美国退出世界卫生组织的程序。这是他第二次下令让美国退出该组织。</p>
+<p>长期以来，川普一直对世界卫生组织持批判态度，随着Covid-19疫情持续扩散，川普政府于2020年7月正式退出该组织。</p>
+<p>川普在行政令中指出，由于世界卫生组织（WHO）对在中国武汉发生的COVID-19大流行病和其他全球卫生危机处理不当，未能采取急需的改革措施，也无法独立于WHO成员国不适当的政治影响之外。</p>
+<p>川普还表示，世卫组织继续要求美国支付不公平的繁重费用，与其他国家的费用不成比例。</p>
+<p>“中国有14亿人口，是美国人口的300%，但对世卫组织的贡献却少了近90%。”川普写道。</p>
+<p>行政令表示，美国打算退出世卫组织，并停止将美国政府的任何资金、支援或资源转移给世卫组织。</p>
+<p>不过，许多科学家担心，此举可能会使数十年来在对抗爱滋病、疟疾和结核病等传染病方面取得的成果倒退。一些专家也警告，这可能会削弱世界对危险新疫情的防御能力。</p>
+<h2>川普签署边境紧急状态声明 表示支持合法移民</h2>
+<p>川普（Donald Trump）签署了一系列边境与移民相关的行政令。他宣布美墨边境进入国家紧急状态、暂停难民安置，以及终止非法移民的“出生公民权”。</p>
+<p>不过，川普强调，他支持合法移民。</p>
+<p>“我对合法移民没有意见。我喜欢这样。我们需要人手。”他说。</p>
+<p>川普承认，推翻自1868年起就被纳入美国宪法的出生公民权，即将面临法律挑战。他说，自动拥有公民权是“荒谬的”，他相信有良好的法律基础来改变它。</p>
+<p>宣布美墨边境进入国家紧急状态，授权在五角大楼在边境部署国防部资源，支持国土安全部的行动。</p>
+<p>“美国的主权正受到攻击??这种对美国人民和美国主权边界完整性的攻击，是对我们国家的严重威胁”，川普说，“由于这种当前危机，以及迫在眉睫的威胁的严重性和紧迫性，武装部队有必要采取一切适当的行动，协助国土安全部取得对南部边境的全面行动控制。”</p>
+<p>一位国防部官员表示，五角大楼“正全力以赴执行总司令的命令，并在他的领导下立即执行”。</p>
 <h2>川普将TikTok禁令推迟75天</h2>
 <p>正如周日承诺的，川普周一签署了一项行政令，将TikTok禁令的执行推迟75天。</p>
 <p>该法案在国会两党的支持下获得通过，并在去年4月由前总统拜登签署。该法规定，自1月19日起，除非中国母公司字节跳动（ByteDance）向美国或其盟国的买家出售TikTok的美国业务，否则将在美国境内遭到禁止。</p>
@@ -324,14 +347,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378927.md#1">白宫：拜登总统将出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411621.md#1">澳外长受邀参加美总统川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416562.md#1">韩国瑜率台湾代表团 赴美出席川普就职典礼</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
